Revision history {{$dist->name}}

{{$NEXT}}

1.09      2013-09-25
	[FIXED]
	- stopwords with 's are learned without 's to match how they are
	  checked
	[CHANGED]
	- leading and trailing punctuation is entirely stripped since the
	  spellchecker won't care anyway.  Trailing periods are *not*
	  stripped as they might be abbreviations ("Ph.D."), but such words
	  are checked against the stoplist both with and without
	  trailing periods to account for abbreviations and words at the
	  end of a sentence.

1.08      2013-09-24
	[FIXED]
	- hyphenated word parts are also checked against the stoplist
	  and stripped (dagolden) GH #9
	[DOCUMENTED]
	- noted that stopwords must be added before words appear in Pod

1.07      2013-09-14
	- add many words
	[FEATURES]
	- Pod::Wordlist is an Object ( dagolden )
	- Lingua::EN::Inflect is used to reduce requiring plurals in the list
	  ( dagolden )
	- the wordlist is now a sharedir file
	[DEPRECATED]
	- accessing %Pod::Wordlist::Wordlist directly

1.06      2013-09-08
	- import stopwords from Pod::Wordlist::hanekomu except names

1.05      2013-07-07
	- add stopwords

1.04      2013-05-08
	- fix tests to work on older perls

1.03      2013-05-08
	- update copyright info
	- require 5.8 (let me know if this is a problem for you)
	- improve tests
	- hopefully fix failing test on windows
	- improve code readability
	- remove DEBUG for private _is_debug method

1.02      2013-05-07
	- convert to dzil and adopt

1.01	2001-10-27
	- first release version ( SBURKE )